--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~2.3",
         "sensio/framework-extra-bundle": "~3.0",
-        "sensio/generator-bundle": "~2.3",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "sensio/generator-bundle": "^3.1"
     },
     "scripts": {
         "post-install-cmd": [
