--- a/src/Yoda/EventBundle/Resources/config/routing.yml
+++ b/src/Yoda/EventBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 yoda_event_homepage:
-    path:     /
+    path:     /{firstName}/{count}
     defaults: { _controller: YodaEventBundle:Default:index }
