--- a/src/Yoda/EventBundle/Resources/config/routing.yml
+++ b/src/Yoda/EventBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+yoda_event_event:
+    resource: "@YodaEventBundle/Resources/config/routing/event.yml"
+    prefix:   /event
+
 yoda_event_homepage:
     path:     /{firstName}/{count}
     defaults: { _controller: YodaEventBundle:Default:index }
