--- a/docker-files/images/php-fpm/Dockerfile
+++ b/docker-files/images/php-fpm/Dockerfile
@@ -25,6 +25,35 @@ RUN apt-get update && apt-get install \
     && chmod +x composer.phar && mv composer.phar /usr/local/bin/composer
 
 RUN docker-php-ext-install mysqli zip pdo_mysql
+RUN docker-php-ext-install opcache
+
+# Install and enable xDebug
+RUN pecl install xdebug
+RUN docker-php-ext-enable xdebug
+
+# Prevent error in nginx error.log
+RUN touch /var/log/xdebug_remote.log
+RUN chmod 777 /var/log/xdebug_remote.log
+
+RUN echo "zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20151012/xdebug.so" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+RUN echo "xdebug.remote_enable=on" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+RUN echo "xdebug.remote_autostart=true" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+RUN echo "xdebug.remote_handler=dbgp" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+RUN echo "xdebug.remote_mode=req" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+RUN echo "xdebug.remote_port=9000" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+RUN echo "xdebug.remote_log=/var/log/xdebug_remote.log" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+RUN echo "xdebug.idekey=phpstorm" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+RUN echo "xdebug.remote_connect_back=Off" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+# docker nginx ip adress
+RUN echo "xdebug.remote_host=172.17.0.1" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+
+
+RUN pecl install apcu && docker-php-ext-enable apcu
+RUN echo "extension=apcu.so" > /usr/local/etc/php/php.ini
+RUN echo "apc.enable_cli=1" > /usr/local/etc/php/php.ini
+RUN echo "apc.enable=1" > /usr/local/etc/php/php.ini
+RUN echo "apc.debug=1" > /usr/local/etc/php/php.ini
+
 
 EXPOSE 9000
 CMD ["php-fpm"]
